Added CSS, IMG, and HTML edits

--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+   <div class="nav">
+       <h1>Header Logo</h1>
+       <ul>
+        <li>headerlink one</li>
+        <li>headerlink two</li>
+        <li>headerlink three</li>
+       </ul>
+   </div>
+   <div class="body">
+    <div class="body-left">
+        <h2>This website is awesome</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, quis doloribus. In illo eius beatae modi suscipit laboriosam vitae doloremque!</p>
+        <button>Sign up</button>
+    </div>
+    <div class="body-right">
+        <img src="img/orionthemes-placeholder-image.png" alt="">
+    </div>
+   </div>
+   <div class="randominformation">
+        <h2>Some Random Information</h2>
+
+   </div>
+
 </body>
 </html>
