Added additions to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -26,9 +26,19 @@
         <img src="img/orionthemes-placeholder-image.png" alt="">
     </div>
    </div>
-   <div class="randominformation">
-        <h2>Some Random Information</h2>
-
+   
+   <div class="body2">
+    <div class="randominformation">
+            <h2>Some Random Information</h2>
+    </div>
+    <div class="imagetray">
+            <img src="img/bcohuFwnmPgIu4aM56YZudq12m02.png" alt="">
+            <img src="img/bcohuFwnmPgIu4aM56YZudq12m02.png" alt="">
+            <img src="img/bcohuFwnmPgIu4aM56YZudq12m02.png" alt="">
+            <img src="img/bcohuFwnmPgIu4aM56YZudq12m02.png" alt="">
+    </div>
+    <div class="imagecomments">
+    </div>
    </div>
 
 </body>
