Additions to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -32,14 +32,45 @@
             <h2>Some Random Information</h2>
     </div>
     <div class="imagetray">
+        <div class="img1">
+        <img src="img/bcohuFwnmPgIu4aM56YZudq12m02.png" alt="">
+            <p class="imginfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, similique.</p>
+        </div>
+        <div class="img1">
             <img src="img/bcohuFwnmPgIu4aM56YZudq12m02.png" alt="">
+                <p class="imginfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, similique.</p>
+        </div>
+        <div class="img1">
             <img src="img/bcohuFwnmPgIu4aM56YZudq12m02.png" alt="">
+                <p class="imginfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, similique.</p>
+        </div>
+        <div class="img1">
             <img src="img/bcohuFwnmPgIu4aM56YZudq12m02.png" alt="">
-            <img src="img/bcohuFwnmPgIu4aM56YZudq12m02.png" alt="">
+                <p class="imginfo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, similique.</p>
+        </div>
     </div>
-    <div class="imagecomments">
     </div>
-   </div>
 
+    <div class="quotetray">
+        <p class="quote"><em>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati corporis tempora, quod temporibus rerum voluptates alias, itaque sed quis deleniti a aliquam aliquid atque error? Quo, cupiditate quia minus aperiam ipsam quas debitis neque at hic voluptates laborum inventore modi officiis cum excepturi veritatis tempore non vitae, ea consequatur cumque!</em></p>
+    </div>
+        <div class="quotename"><p>- Lorem, ipsum.</p>
+    </div>
+
+    <div class="ctatray">
+        <div class="ctabillboard">
+            <div class="billboardleft">
+            <h3>Call to Action! It's Time!</h3>
+            <p>sign up for our product by clicking that button right over there?</p>
+            </div>
+            <div class="ctabutton">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Odin Project 2022</p>
+    </div>
 </body>
 </html>
